--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,10 @@
-build:
+image: python:3.7-stretch
+
+build_test:
   script:
     - apt-get update -y
-    - apt-get install python-dev python-pip
     - pip install --upgrade pip setuptools wheel
     - pip install -r requirements.txt
     - pip install -r requirements-dev.txt
     - python setup.py install
-
-test:
-  script:
     - tox
