--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ envlist = py36
 usedevelop = True
 commands =
     flake8 --statistics tests aav
-    py.test --cov=aav --cov-config=.coveragerc --cov-report=term-missing -n 1 tests aav
+    py.test --cov=aav --cov-config=.coveragerc --cov-report=term-missing tests aav
 deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+    flake8
+    pytest
+    pytest-cov
