--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ envlist = py36
 [testenv]
 usedevelop = True
 commands =
-    flake8 --statistics tests aav
-    py.test --cov=aav --cov-config=.coveragerc --cov-report=term-missing tests aav
+    flake8 --statistics tests src
+    py.test --cov=array_as_vcf --cov-config=.coveragerc --cov-report=term-missing tests src/array_as_vcf
 deps =
     flake8
     pytest
