--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py36
 [testenv]
 commands =
     flake8 --statistics tests src
-    py.test --cov=array_as_vcf --cov-config=.coveragerc --cov-report=term-missing tests src/array_as_vcf
+    py.test --cov=array_as_vcf --cov-config=.coveragerc --cov-report=html --cov-report=xml --cov-report=term-missing tests src/array_as_vcf
 deps =
     flake8
     pytest
