--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         tox_env:
           - twine_check
           - docs
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Set up Python 3.7
@@ -54,11 +54,6 @@ jobs:
           - "3.9"
           - "3.10"
         os: ["ubuntu-latest"]
-        include:
-          - os: "macos-latest"
-            python-version: 3.7
-          - os: "windows-latest"
-            python-version: 3.7
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Set up Python ${{ matrix.python-version }}
