--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=array-as-vcf
-version=1.1.0
+version=1.2.0-dev
 description=Convert SNP array to VCF
 long_description=file: README.md
 long_description_content_type=text/markdown
